# 2025_20605105

./: .gitignore  CMakeLists.txt  Doxyfile  ModelPart.cpp  README.md  adder_8h.html  adder_8h.js  adder_8h_source.html  files.html  git-cheat-sheet.txt  globals.html  globals_func.html  hi_and_date.cmd  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  navtreeindex0.js  optionaldialog.cpp  optionaldialog.ui
.github/workflows/: doxygen-deploy.yml
Worksheet3/: .gitignore
Worksheet3/Exercise1/: hello.cpp
Worksheet3/Exercise4/: calc.cpp
Worksheet3/Exercise5/: adder.h
Worksheet3/Exercise5/adderdynamic/include/: adder.h
Worksheet4/Calc/: CMakeLists.txt  adder.h  calc.cpp
Worksheet4/Calc/build_dynamic/: CMakeCache.txt  Makefile  cmake_install.cmake
Worksheet4/Calc/build_static/: CMakeCache.txt  Makefile  cmake_install.cmake
Worksheet4/hello_cmake/: CMakeLists.txt
Worksheet5/: Doxyfile  adder.cpp  adder.h  calc.cpp
Worksheet7/Exercise1/: main.cpp
Worksheet7/Exercise2/: CMakeLists.txt  main.cpp  run_release.bat
Worksheet7/Exercise2/vrbindings/: README.txt
Worksheet7/Exercise3/: CMakeLists.txt  ModelPart.cpp  ModelPart.h  NOTE_LOCAL_VTK.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
Worksheet7/VTK_App/: CMakeLists.txt  main.cpp  run_release.bat
search/: all_0.js  functions_0.js
worksheet6/: CMakeLists.txt  ModelPartList.cpp  mainwindow.cpp  mainwindow.ui  optionaldialog.h
